kubernetes/infrastructure/controllers/onprem/traefik/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Traefik
    gethomepage.dev/group: Platform
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/href: https://traefik.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=traefik
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.syslabs.dev`)
      kind: Rule
      middlewares:
        - name: authentik-forward-auth
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
